...
    "1000" : {

    },
    "2000" : {

    },
    "Abbrechen" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cancel"
          }
...
        }
      }
    },
    "Ablaufdatum" : {

    },
    "Abmelden" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Sign out"
          }
...
            "state" : "translated",
            "value" : "Esci"
          }
        }
      }
    },
    "Abmelden?" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Sign out?"
          }
...
        }
      }
    },
    "Alle auswählen" : {

    },
    "Alle Dokumente herunterladen" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Download all documents"
          }
...
        }
      }
    },
    "bis %@" : {

    },
    "Changelog" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Changelog"
          }
...
            "state" : "translated",
            "value" : "Conferma codice"
          }
        }
      }
    },
    "Danke für deine Unterstützung" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Thank you for your support"
          }
...
            "state" : "translated",
            "value" : "Eliminare %@ @ %@ e tutti i file salvati?"
          }
        }
      }
    },
    "Demo" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Demo"
          }
...
    "Eigene Felder" : {

    },
    "Eigene Kopfzeilen" : {

    },
    "Einstellungen" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Settings"
          }
...
            "state" : "translated",
            "value" : "Face ID"
          }
        }
      }
    },
    "Farbthema" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Color theme"
          }
...
            "state" : "translated",
            "value" : "IA in elaborazione..."
          }
        }
      }
    },
    "KI-Funktionen (Apple Intelligence)" : {

    },
    "Konten" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
...
            "state" : "translated",
            "value" : "Non ancora inviato al server"
          }
        }
      }
    },
    "Notizen" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Notes"
          }
...
            "state" : "translated",
            "value" : "Data di inizio"
          }
        }
      }
    },
    "Starten" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Start"
          }
...
            "state" : "translated",
            "value" : "Tag"
          }
        }
      }
    },
    "Tags verwalten" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Manage tags"
          }
...
        }
      }
    },
    "unbegrenzt" : {

    },
    "Unterstützung" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Support"
          }
...
        }
      }
    },
    "Vollständig" : {

    },
    "Volltext durchsuchbar" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Full text searchable"
          }
...
    "Widerrufen" : {

    },
    "Widget" : {

    },
    "Widget aktiv" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Widget active"
          }
...
